--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ input:checked + .slider .off
 <script  defer src="module/memtools.js"></script>
 <script  defer src="module/rw.js"></script>
 <script  defer src="webkit.js"></script>
-<body onload="load_exploit();">
+<body onload="load_exploit()">
 <script>
    if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 </script>
@@ -244,7 +244,8 @@ input:checked + .slider .off
     <div id="notify" style="display: ;">
         <img src="./hen.png" alt="" width="100px" height="100px">
         <p id="log"></p>
-    </div>
+    </div>	
+
 <h1 id="msgs" style="margin-top:30px;color:#e5e4e2">LAZ305 ESP32-S2 Auto PSfree</h1>
 <h1 id=msgs2 style='font-size:25px;text-align:center;color:#e5e4e2;'>∆❍X❑</h1>
 <div text-align= center>Pass = <span id=passCounter></span>&nbsp;&nbsp;:&nbsp;&nbsp;Fail = <span id=failCounter></span></div>
@@ -254,7 +255,7 @@ input:checked + .slider .off
   <input type="checkbox" id="checkbox2" onclick="checkthebox2()">
   <span class="slider round"><span class="on">AutoLoadGHEN ON</span><span class="off">AutoLoadGHEN OFF</span></span>
 </label>
-<button style='font-size:22px;text-align:center;color:#4863A0;background-color: #e5e4e2;' class="pointer" onclick=load_goldhen2b2() onMouseOver="msgs2.innerHTML='GoldHEN 2.3 by SISTRo'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>GoldHen 2.3 </B></button></a>
+<button style='font-size:22px;text-align:center;color:#4863A0;background-color: #e5e4e2;' class="pointer" onclick=load_goldhen2b2() onMouseOver="msgs2.innerHTML='GoldHEN 2.4 + ItemzFlow by SISTRo'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>GoldHen+IF 2.4 </B></button></a>
 <button style='margin-top:5px;font-size:22px;text-align:center;color:white;background-color: goldenrod;' class="pointer" onclick=load_platinum() onMouseOver="msgs2.innerHTML='GoldHEN 2.4b16.2 by SISTRo'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>GoldHEN 2.4 </B></button></a>
 <label class="switch">
   <input type="checkbox" id="checkbox1" onclick="checkthebox1()">
@@ -269,32 +270,34 @@ input:checked + .slider .off
 <button style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onclick=load_cacheinstall2() onMouseOver="msgs2.innerHTML='DB Backup'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B> DB Backup </B></button></a>
 <button style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onclick=load_cacheinstall() onMouseOver="msgs2.innerHTML='DB Restore'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B> DB Restore </B></button></a>
 </div></p>
-<div class="about2" style='margin-right:75px'><a href="https://neo305.github.io/ESP32-S2-Themes-103" target="_blank" rel="noopener noreferrer"><button id = "enter" style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='Change Wallpaper'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Themes</B></button></a></div>
-<div class="about" style='margin-left:75px'> <a href="./payloads/index.html"><button id = "enter" style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='Offline Payloads Host'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Payloads</B></button></a></div>
+<div class="about2" style='margin-right:75px'><a href="https://neo305.github.io/ESP32-S2-Themes/theme.html"><button id = "enter" style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='Change Wallpaper'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Themes</B></button></a></div>
+
+<div class="about" style='margin-left:75px'> <a href="https://neo305.github.io/ESP32-Payloads/"><button id = "enter" style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='Offline Payloads Host'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Payloads</B></button></a></div>
+
 <div class="about" style='margin-left:550px'><a href="http://10.1.1.1/admin.html" target="_blank" rel="noopener noreferrer"><button style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='EPS32-S2 Setting'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Offline ESP Settings</B></button></a></div>
 <div class="about" style='margin-left:75px'><a href="http://10.12.1.103/admin.html" target="_blank" rel="noopener noreferrer"><button style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='PC Online EPS32-S2 Setting'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Online ESP Settings</B></button></a></div>
-<script>
-UA=navigator.userAgent.substring(navigator.userAgent.indexOf("6.72 (") + 28,navigator.userAgent.indexOf(") Apple"));
-if (UA=="layStation 4/9.00")UA="9.00";
-if (UA=="layStation 4/9.50")UA="9.50";
-if (UA!="9.00" && UA!="9.50")alert("This Is For PS4 FW9.00 Only!");
-PS4fw.innerHTML=""+UA+" Binloader";
-</script>
-<script>
+
+    <script>
+    var UA = navigator.userAgent.substring(navigator.userAgent.indexOf('5.0 (') + 19, navigator.userAgent.indexOf(') Apple')).replace("layStation 4/","");
+    if (UA == "9.00"){PS4fw.innerHTML="v"+UA+" Detected"};if(UA != "9.00"){PS4fw.innerHTML="Spoofed To v"+UA};
+    </script>
+
+    <script>
     if (localStorage.passcount == null || localStorage.passcount == undefined) localStorage.passcount=0;
      if (localStorage.passCounter == null || localStorage.passCounter == undefined ){
       passCounter.innerHTML=localStorage.passcount;}
     if (localStorage.failcount == null || localStorage.failcount == undefined) localStorage.failcount=0;
      if (localStorage.failCounter == null || localStorage.failCounter == undefined ){
       failCounter.innerHTML=localStorage.failcount;}
-</script>
+    </script>
+	
 <script type="text/javascript">
  if(localStorage.getItem("theme")==null){
    localStorage.setItem("theme","1.jpg")
  }
  document.body.style.background = "url('"+localStorage.getItem("theme")+"')"
  document.body.style.backgroundSize = "cover"
- var imgs = ["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg","16.jpg","17.jpg","18.jpg"];
+ var imgs = ["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg","16.jpg","17.jpg","18.jpg","19.jpg","20.jpg","21.jpg","22.jpg","23.jpg","24.jpg","25.jpg","26.jpg","27.jpg","28.jpg","29.jpg","30.jpg","31.jpg","32.jpg","33.jpg","34.jpg","35.jpg","36.jpg","37.jpg","38.jpg","39.jpg","40.jpg","41.jpg","42.jpg","43.jpg","44.jpg","45.jpg","46.jpg","47.jpg","48.jpg"];
  render()
  function render(){
      document.querySelector(".themes").innerHTML=""
@@ -349,12 +352,12 @@ PS4fw.innerHTML=""+UA+" Binloader";
     if (chkBox.checked == true){
       var checkbox_on = document.getElementById("checkbox2").checked = true
       localStorage.setItem("CheckBOX2", checkbox_on)
-      LoadedMSG="GoldHEN 2.3 Auto ON  !!!";
+      LoadedMSG="GoldHEN 2.4+IF Auto ON  !!!";
       autopl();
     }else if (chkBox.checked == false) {
       var checkbox_off = document.getElementById("checkbox2").checked = false
       localStorage.setItem("CheckBOX2", checkbox_off)
-      LoadedMSG="GoldHEN 2.3 Auto OFF  !!!";
+      LoadedMSG="GoldHEN 2.4+IF Auto OFF  !!!";
       autopl();
     }
   }
